# risk_kit

./: .flake8  .markdownlint.yaml  README.md  pyproject.toml
docs/: monte_carlo.md  overview.md
src/risk_kit/: adder.py  finance.py  mortgage.py  stock.py
tests/: test_adder.py  test_finance.py  test_mortgage.py  test_stock.py
